--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-cayman
-title: Nark
-description: Identify the nark.
+title: LYY Link Shortner Network
+description: Own your own link shortening network
